--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <p>Please, just bring yourself and have fun with us.</p>
     </section>
     <section class="faq">
-        <img src="assets/ring2.jpg" alt="Rings">
+        <img src="assets/ring2a.jpg" alt="Rings">
       <h2>Questions & Answers</h2>
       <div class="question-group">
         <h3>Travel and accomodations</h3>
